--- a/app/src/app/components/login/login.component.html
+++ b/app/src/app/components/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="wrapper">
+  <div class="body">
+    <img src="" alt="" class="logo"/>
+    <h1>Iniciar Sesion</h1>
+    <div class="form-floating mb-3">
+      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">Email address</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <label for="floatingPassword">Password</label>
+    </div>
+
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary" type="button">Button</button>
+    </div>
+
+    <div class="mt-3"> <a routerLink="/sing-in">Crear cuenta</a></div>
+
+  </div>
+</div>
+
