--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -2,3 +2,22 @@
 html, body{
   height: 100%;
 }
+
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(105, 105, 105, 0.72);
+  height: 100%;
+}
+
+.body{
+  max-width: 300px;
+  width: 100%;
+  text-align: center;
+}
+
+.logo{
+  height: 100px;
+  margin-bottom: 10px;
+}
